--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 </style>
   <head>
 
+    <link rel="icon" href="marcalogo.ico">
+    <title>MARCA - Diario online líder en información deportiva</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> practicaB4 </title>
