--- a/index.html
+++ b/index.html
@@ -5,27 +5,42 @@
     color: red;
     display: block;
     font-size: small;
-    letter-spacing: 0px;
+    letter-spacing: 0 px;
   }
 
   b1 {
     font-size: x-large;
     display: block;
-    margin-bottom: 0.67em;
+    margin-bottom: 0.67 em;
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
-    letter-spacing: -1.2px;
+    letter-spacing: -1.2 px;
   }
 
   b2 {
     font-size: large;
     display: block;
-    margin-bottom: 0.67em;
+    margin-bottom: 0.67 em;
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
-    letter-spacing: -.7px;
+    letter-spacing: -.7 px;
+  }
+
+  div.headerxd div {
+    margin-bottom: -40;
+  }
+
+  ul.equipos li {
+    display: inline;
+    margin-right: 25;
+    margin-bottom: 0;
+  }
+
+  div.list div {
+    justify-content: center;
+
   }
 </style>
 
@@ -38,59 +53,134 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
+
 <body>
 
-    <header class="header pt-2">
-    
-        
-      <div class="row flex-nowrap justify-content-between align-items-center">
-        <div class="col-4 pt-1">
-          <img src="lo+trend.JPG" alt="lo+trend" width="15%" height="15%">
-          <a class=" text-dark" href="#">Lo + Trending</a>
-        </div>
-        <div class="col-4 text-center">
-          <img src="marcalogotipo.jpg" alt="MARCA" width="30%" height="30%">
-        </div>
-
+  <header class="header pt-1">
+    <div class="headerxd row flex-nowrap justify-content-between align-items-center container-fluid">
+      <div class="col-4 pt-1">
+        <img src="lo+trend.JPG" alt="lo+trend" width="10%" height="10%">
+        <a class=" text-dark" href="#">Lo + Trending</a>
+      </div>
+      <div class="col-4 align-middle">
+        <img src="marcalogotipo.jpg" alt="MARCA" width="30%" height="30%">
+      </div>
+      <div>
         <a class="btn btn-sm btn-outline-danger bg-danger text-white mx-0" href="#">Subscribete</a>
         <a class="btn btn-sm btn-outline-black-50 text-danger border border-black" href="#">Iniciar sesión</a>
       </div>
-
   </header>
-  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#nav-principal" aria-expanded="false" aria-label="Navegación Principal">
+
+  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#nav-principal"
+    aria-expanded="false" aria-label="Navegación Principal">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <nav class="navbar navbar-expand-lg navbar-light justify-content-center">
-    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#nav-principal" aria-expanded="false" aria-label="Navegación Principal">
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#nav-principal"
+      aria-expanded="false" aria-label="Navegación Principal">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div id="nav-principal" class="navbar-collapse mt-4 mt-lg-0 collapse py-1 mb-2 bg-danger" style="">
-      <nav class="text-white navegacion-principal nav justify-content-between container flex-column flex-lg-row text-center">
-        <a href="#" class="nav-link">Futbol</a>
-        <a href="#" class="nav-link">Futbol Internacional</a>
-        <a href="#" class="nav-link">Motor</a>
-        <a href="#" class="nav-link">Otros deportes</a>
-        <a href="#" class="nav-link">Coronavirus</a>
-        <a href="#" class="nav-link">Más+</a>
+    <div id="nav-principal" class="navbar-collapse mt-4 mt-lg-0 collapse py-1 mb-2 bg-danger">
+      <nav
+        class="text-white navegacion-principal nav justify-content-between container flex-column flex-lg-row text-center">
+        <a href="#" class="nav-link dropdown-toggle text-white" id="deportesDropdown" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <strong>Fútbol</a></strong>
+        <div class="dropdown-menu aria-labelledby=" anunciosDropdown>
+          <a href="#" class="dropdown-item">Liga MX</a>
+          <a href="#" class="dropdown-item">Liga de Expansión MX</a>
+          <a href="#" class="dropdown-item">Copa MX</a>
+          <a href="#" class="dropdown-item">Concachampions</a>
+          <a href="#" class="dropdown-item">Mexicanos por el mundo</a>
+          <a href="#" class="dropdown-item"></a>
+        </div>
+        <a href="#" class="nav-link dropdown-toggle text-white" id="deportesDropdown" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <strong>Fútbol Internacional</a></strong>
+        <div class="dropdown-menu aria-labelledby=" anunciosDropdown>
+          <a href="#" class="dropdown-item">1</a>
+          <a href="#" class="dropdown-item">2</a>
+          <a href="#" class="dropdown-item">3</a>
+        </div>
+        <a href="#" class="nav-link dropdown-toggle text-white" id="deportesDropdown" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <strong>Motor</a></strong>
+        <div class="dropdown-menu aria-labelledby=" anunciosDropdown>
+          <a href="#" class="dropdown-item">1</a>
+          <a href="#" class="dropdown-item">2</a>
+          <a href="#" class="dropdown-item">3</a>
+        </div>
+        <a href="#" class="nav-link dropdown-toggle text-white" id="deportesDropdown" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <strong>Otros deportes</a></strong>
+        <div class="dropdown-menu aria-labelledby=" anunciosDropdown>
+          <a href="#" class="dropdown-item">1</a>
+          <a href="#" class="dropdown-item">2</a>
+          <a href="#" class="dropdown-item">3</a>
+        </div>
+        <a href="#" class="nav-link dropdown-toggle text-white" id="deportesDropdown" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <strong>Coronavirus</a></strong>
+        <div class="dropdown-menu aria-labelledby=" anunciosDropdown>
+          <a href="#" class="dropdown-item">1</a>
+          <a href="#" class="dropdown-item">2</a>
+          <a href="#" class="dropdown-item">3</a>
+        </div>
+        <a href="#" class="nav-link dropdown-toggle text-white" id="deportesDropdown" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <strong>Más+</a></strong>
+        <div class="dropdown-menu aria-labelledby=" anunciosDropdown>
+          <a href="#" class="dropdown-item">1</a>
+          <a href="#" class="dropdown-item">2</a>
+          <a href="#" class="dropdown-item">3</a>
+        </div>
+        <div class="main-header-container">
+          <div class="main-header-search" aria-label="Buscador">
+            <input type="search" name="q" placeholder="Buscar en marca.com" title="Buscar en marca.com">
+          </div>
       </nav>
     </div>
-  </nav>
     </div>
-      <div class="col-4 d-flex justify-content-end align-items-center" style="padding-right: 10%;">
-        <a class="text-white" href="#" aria-label="Search">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"
-            focusable="false">
-            <title>Search</title>
-            <circle cx="10.5" cy="10.5" r="7.5"></circle>
-            <path d="M21 21l-5.2-5.2"></path>
-          </svg>
-        </a>
+  </nav>
+  <div class="container list container-fluid">
+    <ul class="equipos">
+      <li><img src="1america.png" alt="america" width="30"></li>
+      <li><img src="2atlas.png" alt="atlas" width="30"></li>
+      <li><img src="3sanluis.png" alt="sanluis" width="30"></li>
+      <li><img src="4cruzazul.png" alt="cruzazul" width="30"></li>
+      <li><img src="5chivas.png" alt="chivas" width="30"></li>
+      <li><img src="6juarez.png" alt="juarez" width="30"></li>
+      <li><img src="7leon.png" alt="leon" width="30"></li>
+      <li><img src="8mazatlan.png" alt="mazatlan" width="30"></li>
+      <li><img src="9monterrey.png" alt="monterrey" width="30"></li>
+      <li><img src="10necaxa.png" alt="necaxa" width="30"></li>
+      <li><img src="11pachuca.png" alt="pachuca" width="30"></li>
+      <li><img src="12puebla.png" alt="puebla" width="30"></li>
+      <li><img src="13pumas.png" alt="pumas" width="30"></li>
+      <li><img src="14queretaro.png" alt="queretaro" width="30"></li>
+      <li><img src="15santos.png" alt="santos" width="30"></li>
+      <li><img src="16tigres.png" alt="tigres" width="30"></li>
+      <li><img src="17xolos.png" alt="xolos" width="30"></li>
+      <li><img src="18toluca.png" alt="toluca" width="30"></li>
+    </ul>
+  </div>
+  </div>
+  </div>
+  <div class="col-4 d-flex justify-content-end align-items-center" style="padding-right: 10%;">
+    <a class="text-white" href="#" aria-label="Search">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"
+        focusable="false">
+        <title>Search</title>
+        <circle cx="10.5" cy="10.5" r="7.5"></circle>
+        <path d="M21 21l-5.2-5.2"></path>
+      </svg>
+    </a>
     </nav>
   </div>
-  <div class="container-fluid pt-5 ">
+  <div class="container-fluid pt-0 ">
 
     <div class="jumbotron jumbotron-fluid bg-danger py-2 mb-1">
       <div class="container-fluid justify-content-center">
@@ -154,16 +244,13 @@
                                   <td>27</td>
                                 </tr>
                                 <tr>
-
                                   <td><img src="provIcon.png" alt="" style="width: 3%;">PACHUCA</td>
                                   <td>0</td>
                                 </tr>
                               </tbody>
                             </table>
                           </div>
-
                         </div>
-
                       </div>
 
                       <div class="carousel-item">
@@ -269,12 +356,6 @@
                     </div>
                   </div>
                 </div>
-
-
-
-
-
-
               </div>
 
               <li style="width: 12%; " class="carousel-control-prev bg-danger" role="button"
@@ -308,7 +389,6 @@
                 max-width: 100%;">
           </div>
         </div>
-
 
         <div class="col-md-8 ">
 
@@ -609,11 +689,37 @@
         </div>
 
       </div>
-
     </div>
   </div>
-
   </div>
+  <footer class="footer-07 bg-light">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 text-center text-dark">
+          <p class="menu">
+            <a href="#">Política de cookies</a>
+            <a href="#">Configuración de cookies</a>
+            <a href="#">Política de privacidad </a>
+            <a href="#">Contacto </a>
+            <a href="#">Ayuda </a>
+          </p>
+
+          <div class="row mt-1">
+            <div class="col-md-12 text-center">
+              <p class="copyright">
+                © Octubre 2022 Unidad Editorial Información Deportiva, S.L.U. Todos los derechos reservados. </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- <ul class="footer-social p-0">
+    <li class="img"></span></a></li>
+    <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook"><span class="ion-logo-facebook"></span></a></li>
+    <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Instagram"><span class="ion-logo-instagram"></span></a></li>
+    </ul>
+    </div>
+    </div> -->
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
