--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     position: absolute;
     width: 300 px;
     height: 50 px;
-    left: 0 auto;
+    left: 0;
     padding: 10 px;
   }
 </style>
