Agregando logo MARCA a banner en movil

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     left: 0 auto;
     padding: 10 px;
   }
+  
 </style>
 
 <head>
@@ -112,12 +113,9 @@
     </header>
   </div>
   
-  
-
-  
- 
   <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background-color: #e01404">
-    <a class="navbar-brand d-md-none font-weight-bold" href="#">MARCA</a>
+    <!-- <a class="navbar-brand d-md-none font-weight-bold" href="#">MARCA</a> -->
+    <img src="marcalogotipo.jpg" alt="MARCA" width="30%">
 
     <div>
       <a class="btn btn-sm btn-outline-danger text-danger bg-white"
