Haciendo una mexicanada más
Acortando texto estorboso

--- a/index.html
+++ b/index.html
@@ -686,8 +686,8 @@
                         HUMILDES</t1>
                       <b1 href="#">MADRE MIA, EL BICHO. EL BICHO. ¡EL
                         BICHOOOOO!</b1>
-                      <span class="badge text-white" style="background-color: #e01404;">DESTACADO LA ÚLTIMA
-                        SEMANA</span>
+                      <span class="badge text-white" style="background-color: #e01404;">DESTACADO
+                      </span>
                     </div>
                   </div>
                 </div>
