--- a/index.html
+++ b/index.html
@@ -334,17 +334,13 @@
         </form>
       </div>
 
-
-
     </div>
-
 
   </nav>
 
 
-  <div class="container-fluid pt-3 pb-1 bg-light align-items-center list d-none d-sm-block">
-    <div class="container">
-      <ul class="equipos">
+   <div class="container-fluid pt-3 justify-content-center ">
+    <ul class="equipos justify-content-center">
         <li><img src="1america.png" alt="america" width="30"></li>
         <li><img src="2atlas.png" alt="atlas" width="30"></li>
         <li><img src="3sanluis.png" alt="sanluis" width="30"></li>
@@ -410,8 +406,6 @@
 
               <div class="col-10">
                 <div class="container-fluid bg-white ">
-
-
 
                   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 
