--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
   </nav>
 
 
-  <div class="container-fluid pt-3 pb-1 bg-light align-items-center list d-none d-md-block">
-    <div class="container">
-      <ul class="equipos">
+
+    <div class="container-fluid pt-3 justify-content-center ">
+    <ul class="equipos justify-content-center">
         <li><img src="1america.png" alt="america" width="30"></li>
         <li><img src="2atlas.png" alt="atlas" width="30"></li>
         <li><img src="3sanluis.png" alt="sanluis" width="30"></li>
