--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
 
-<body style="background-color: #fffcfc;">
+<body style="background-color: #ffffff;">
 
   <div class="container-fluid py-2 d-none d-md-block">
     <header >
@@ -341,48 +341,77 @@
 
   </nav>
 
+<div class="container-fluid bg-light">
+  <div class="row  my-3 bg-light">
 
-
-    <div class="container-fluid pt-3 justify-content-center ">
-    <ul class="equipos justify-content-center">
-        <li><img src="1america.png" alt="america" width="30"></li>
-        <li><img src="2atlas.png" alt="atlas" width="30"></li>
-        <li><img src="3sanluis.png" alt="sanluis" width="30"></li>
-        <li><img src="4cruzazul.png" alt="cruzazul" width="30"></li>
-        <li><img src="5chivas.png" alt="chivas" width="30"></li>
-        <li><img src="6juarez.png" alt="juarez" width="30"></li>
-        <li><img src="7leon.png" alt="leon" width="30"></li>
-        <li><img src="8mazatlan.png" alt="mazatlan" width="30"></li>
-        <li><img src="9monterrey.png" alt="monterrey" width="30"></li>
-        <li><img src="10necaxa.png" alt="necaxa" width="30"></li>
-        <li><img src="11pachuca.png" alt="pachuca" width="30"></li>
-        <li><img src="12puebla.png" alt="puebla" width="30"></li>
-        <li><img src="13pumas.png" alt="pumas" width="30"></li>
-        <li><img src="14queretaro.png" alt="queretaro" width="30"></li>
-        <li><img src="15santos.png" alt="santos" width="30"></li>
-        <li><img src="16tigres.png" alt="tigres" width="30"></li>
-        <li><img src="17xolos.png" alt="xolos" width="30"></li>
-        <li><img src="18toluca.png" alt="toluca" width="30"></li>
-      </ul>
+    <div class="col-1 ">
+      <li style="width: 100%;" class="carousel-control-prev badge-danger ml-2 " role="button"
+        href="#carouselExampleCaptions" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </li>
     </div>
 
+    <div class="col-10">
+      <div class="container-fluid bg-light ">
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+
+          <div class="row justify-content-center">
+
+            <div class="col-md-8">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="row justify-content-around">
+      <a><img src="1america.png" alt="america" width="30"></a>
+      <a><img src="2atlas.png" alt="atlas" width="30"></a>
+      <a><img src="3sanluis.png" alt="sanluis" width="30"></a>
+      <a><img src="4cruzazul.png" alt="cruzazul" width="30"></a>
+      <a><img src="5chivas.png" alt="chivas" width="30"></a>
+      <a><img src="6juarez.png" alt="juarez" width="30"></a>
+      <a><img src="7leon.png" alt="leon" width="30"></a> 
+      <a><img src="8mazatlan.png" alt="mazatlan" width="30"></a>
+      <a><img src="9monterrey.png" alt="monterrey" width="30"></a>
+             </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="row justify-content-around">
+      <a><img src="10necaxa.png" alt="necaxa" width="30"></a>
+      <a><img src="11pachuca.png" alt="pachuca" width="30"></a>
+      <a><img src="12puebla.png" alt="puebla" width="30"></a>
+      <a><img src="13pumas.png" alt="pumas" width="30"></a>
+      <a><img src="14queretaro.png" alt="queretaro" width="30"></a>
+      <a><img src="15santos.png" alt="santos" width="30"></a>
+      <a><img src="16tigres.png" alt="tigres" width="30"></a>
+      <a><img src="17xolos.png" alt="xolos" width="30"></a>
+      <a><img src="18toluca.png" alt="toluca" width="30"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="col-1">
+      <li style="width: 100%;" class="carousel-control-next badge-danger mr-2" role="button"
+        href="#carouselExampleCaptions" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </li>
+    </div>
+  </div>
+</div>
+    
+  
   </div>
 
   </div>
 
-  <div class="col-4 d-flex justify-content-end align-items-center" style="padding-right: 10%;">
-    <a class="text-white" href="#" aria-label="Search">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"
-        focusable="false">
-        <title>Search</title>
-        <circle cx="10.5" cy="10.5" r="7.5"></circle>
-        <path d="M21 21l-5.2-5.2"></path>
-      </svg>
-    </a>
-    </nav>
-  </div>
-
+  
   <div class="container-fluid pt-0 ">
 
     <div class="jumbotron jumbotron-fluid py-2 mb-1" style="background-color: #ca0612">
@@ -404,7 +433,7 @@
             <div class="row">
               <div class="col-1">
                 <li style="width: 100%;" class="carousel-control-prev badge-danger ml-2" role="button"
-                  href="#carouselExampleCaptions" data-slide="prev">
+                  href="#carouselExampleCaptions2" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </li>
@@ -413,7 +442,7 @@
               <div class="col-10">
                 <div class="container-fluid bg-white ">
 
-                  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                  <div id="carouselExampleCaptions2" class="carousel slide" data-ride="carousel">
 
                     <div class="row justify-content-center">
 
@@ -485,7 +514,7 @@
                                       <td>1</td>
                                     </tr>
                                     <tr class="font-weight-bold">
-                                      <td><img src="19realmadrid.png" alt="" style="width: 7%;"> Real Madrid</td>
+                                      <td><img src="19realmadrid.png" alt="" style="width: 5%;"> Real Madrid</td>
                                       <td>6</td>
                                     </tr>
                                   </tbody>
@@ -583,7 +612,7 @@
 
               <div class="col-1">
                 <li style="width: 100%;" class="carousel-control-next badge-danger mr-2" role="button"
-                  href="#carouselExampleCaptions" data-slide="next">
+                  href="#carouselExampleCaptions2" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </li>
