--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
   <div class="row  my-3 bg-light">
 
     <div class="col-1 ">
-      <li style="width: 100%;" class="carousel-control-prev badge-danger ml-2 " role="button"
+      <li style="width: 100%;" class="carousel-control-prev  ml-2 " role="button"
         href="#carouselExampleCaptions" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -359,10 +359,10 @@
 
           <div class="row justify-content-center">
 
-            <div class="col-md-8">
+            <div class="col-12">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <div class="row justify-content-around">
+                  <div class="row justify-content-around mx-1">
       <a><img src="1america.png" alt="america" width="30"></a>
       <a><img src="2atlas.png" alt="atlas" width="30"></a>
       <a><img src="3sanluis.png" alt="sanluis" width="30"></a>
@@ -376,7 +376,7 @@
                 </div>
 
                 <div class="carousel-item">
-                  <div class="row justify-content-around">
+                  <div class="row justify-content-around mx-1">
       <a><img src="10necaxa.png" alt="necaxa" width="30"></a>
       <a><img src="11pachuca.png" alt="pachuca" width="30"></a>
       <a><img src="12puebla.png" alt="puebla" width="30"></a>
@@ -397,7 +397,7 @@
     </div>
 
     <div class="col-1">
-      <li style="width: 100%;" class="carousel-control-next badge-danger mr-2" role="button"
+      <li style="width: 100%;" class="carousel-control-next  mr-2" role="button"
         href="#carouselExampleCaptions" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
@@ -432,7 +432,7 @@
 
             <div class="row">
               <div class="col-1">
-                <li style="width: 100%;" class="carousel-control-prev badge-danger ml-2" role="button"
+                <li style="width: 100%;" class="carousel-control-prev  ml-2" role="button"
                   href="#carouselExampleCaptions2" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
@@ -611,7 +611,7 @@
               </div>
 
               <div class="col-1">
-                <li style="width: 100%;" class="carousel-control-next badge-danger mr-2" role="button"
+                <li style="width: 100%;" class="carousel-control-next mr-2" role="button"
                   href="#carouselExampleCaptions2" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
@@ -731,8 +731,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger ">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger ">FORMULA 1</t1>
+                        <b2 class="card-text">CHECO PEREZ QUEDA EN #1 LUGAR, OTRA VEZ...</b2>
                       </div>
                     </div>
                   </div>
@@ -741,8 +741,8 @@
                       <li class="list-group-item bg-light border-0 my-2">
                         <div class="row align-items-center">
                           <div class="col-md-8 col-sm-6 col-6 pr-1">
-                            <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                            <b2 href="#">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                            <t1 class="small font-weight-bold text-danger">FUTBOLISTAS HUMILDES</t1>
+                            <b2 href="#">EL HIJO DEL BICHO NUNCA HA TOMADO COCA-COLA; SE MANTIENE SIEMPRE SANO</b2>
                           </div>
                           <div class="col-md-4 col-sm-6 col-6">
                             <img src="small1.webp" alt="" style="max-height:
@@ -754,8 +754,8 @@
                       <li class="list-group-item bg-light border-0 my-2">
                         <div class="row align-items-center">
                           <div class="col-md-8 col-sm-6 col-6 pr-1">
-                            <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                            <b2 href="#">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                            <t1 class="small font-weight-bold text-danger">RUMORES</t1>
+                            <b2 href="#">¿SIGUE VIVO? ¡MARADONA CAPTADO EN CÁMARAS 2 AÑOS DESPUES DE SU MUERTE!"</b2>
                           </div>
                           <div class="col-md-4 col-sm-6 col-6">
                             <img src="small1.webp" alt="" style="max-height:
@@ -767,8 +767,8 @@
                       <li class="list-group-item bg-light border-0 my-2">
                         <div class="row align-items-center">
                           <div class="col-md-8 col-sm-6 col-6 pr-1">
-                            <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                            <b2 href="#">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                            <t1 class="small font-weight-bold text-danger">CONSEJOS PROFESIONALES</t1>
+                            <b2 href="#">"ME TOMO UN CHOCOMILK ANTES DE CADA PARTIDO": LEWANDOSKI NOS CUENTA SUS SECRETOS</b2>
                           </div>
                           <div class="col-md-4 col-sm-6 col-6">
                             <img src="small1.webp" alt="" style="max-height:
@@ -802,8 +802,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger">CONTROVERSIA</t1>
+                        <b2 class="card-text">AL CHICHARITO LE VA MEJOR EN LOS "UNITES"</b2>
                       </div>
                     </div>
                   </div>
@@ -812,8 +812,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger">CONTROVERSIA</t1>
+                        <b2 class="card-text">EL BICHO VS MESSI: ¿QUIEN GANARÍA?</b2>
                       </div>
                     </div>
                   </div>
@@ -822,8 +822,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger">RUMORES</t1>
+                        <b2 class="card-text">AVISTAMIENTO DE OVNI EN PARTIDO DEL TOLUCA</b2>
                       </div>
                     </div>
                   </div>
@@ -834,8 +834,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger">FUTBOLISTAS HUMILDES</t1>
+                        <b2 class="card-text">NEYMAR JR PELEA CONTRA MACACO: TERMINA MAL</b2>
                       </div>
                     </div>
                   </div>
@@ -844,8 +844,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger">CONSEJOS PROFESIONALES</t1>
+                        <b2 class="card-text">NO LE VAYAS AL CRUZ AZUL, NO VALE LA PENA</b2>
                       </div>
                     </div>
                   </div>
@@ -854,8 +854,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger">SELECCIÓN MEXICANA</t1>
+                        <b2 class="card-text">HAALAN ES FICHADO POR EL NECAXA</b2>
                       </div>
                     </div>
                   </div>
@@ -897,8 +897,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger ">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger ">FUTBOLISTAS</t1>
+                        <b2 class="card-text">JURGERDAMM BUSCARÁ LA PRESIDENCIA</b2>
                       </div>
                     </div>
                   </div>
@@ -907,8 +907,8 @@
                       <img class="card-img-top" src="img1.jpg" alt="Card image
                           cap">
                       <div class="card-body">
-                        <t1 class="small font-weight-bold text-danger ">TITULO</t1>
-                        <b2 class="card-text">INSERTE NOTICIA SOBRE EL "FUCHO BOLO"</b2>
+                        <t1 class="small font-weight-bold text-danger ">FUTBOLISTAS HUMILDES</t1>
+                        <b2 class="card-text">MESSI AMENAZA A UN ANCIANITA</b2>
                       </div>
                     </div>
                   </div>
